--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "helmet": "3.15",
-    "socket.io": "^2.1.1"
+    "helmet": "^3.15.0",
+    "socket.io": "^2.1.1",
+    "uuid": "^3.4.0"
   }
 }
